[package]
name = "kucoin_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-crypto = "0.2.36"
base64 = "0.13.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = {version = "1", features = ["full"]}
serde_json = "1.0.73"
serde = { version = "1.0", features = ["derive"] }